basically changed nothing but some printouts

--- a/platformio.ini
+++ b/platformio.ini
@@ -18,8 +18,17 @@ lib_deps =
 	;https://github.com/dronecan/libcanard.git
 build_flags = 
 	-DHAL_CAN_MODULE_ENABLED
-	-std=c++11
 	-DDRONECAN_CXX_WRAPPERS
+	-O0
+	-g2
+	-ggdb2
+build_unflags=
+	-Os
+	-std=gnu++11
+debug_build_flags =
+	-O0
+	-g2
+	-ggdb2
 monitor_speed = 115200
 monitor_port = COM13
 debug_tool = stlink
