minor changes, still doesnt work

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,11 +15,11 @@ framework = arduino
 lib_deps = 
 	pazi88/STM32_CAN@^1.1.0
 	ricaun/ArduinoUniqueID@^1.3.0
-	;https://github.com/dronecan/libcanard.git
+lib_archive = false
 build_flags = 
 	-DHAL_CAN_MODULE_ENABLED
 	-DDRONECAN_CXX_WRAPPERS
-	-O0
+	-Og
 	-g2
 	-ggdb2
 build_unflags=
